--- a/index.html
+++ b/index.html
@@ -55,6 +55,67 @@
       <img src="./images/team4.png" alt="" class="four-t">
       </div>
     </section>
+      <!-- feature section   -->
+      <section class="second-section">
+       <div class="features">
+        <h2>Features you will 
+         <br> love & enjoy</h2>
+       </div>
+       <!-- <p class="fea-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random words which don't look even</p>
+     
+       <div class="features-second">
+        <h3>Dexstop & Mobile Version</h3>
+        <p class="fea-p-sec">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+       </div>
+       <div class="features-third">
+        <h3>Drag & Drop Builder</h3>
+        <p class="fea-p-third">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+       </div>
+       <div class="features-four">
+        <h3>Awesome Modern Design</h3>
+        <p class="fea-p-four">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+       </div>
+       <div class="features-five">
+        <h3>Super Easy to Edit</h3>
+        <p class="fea-p-five">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+       </div> -->
+       
+
+
+
+
+
+
+ <article class="blog"> 
+  <p class="fea-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random words which don't look even</p>
+
+
+  <!-- <article class="blog"> -->
+  <div class="features-second">
+   <h3 class="h3-sec">Dexstop & Mobile Version</h3>
+   <p class="fea-p-sec">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+  </div>
+  <div class="features-third">
+   <h3>Drag & Drop Builder</h3>
+   <p class="fea-p-third">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+  </div>
+  <div class="features-four">
+   <h3>Awesome Modern Design</h3>
+   <p class="fea-p-four">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+  </div>
+  <div class="features-five">
+   <h3>Super Easy to Edit</h3>
+   <p class="fea-p-five">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+  </div>
+
+
+</article>
+
+
+
+      </section>
+
+    </section>
   </main>
 
 </body>
