--- a/index.html
+++ b/index.html
@@ -112,11 +112,68 @@
 </article>
 
 
-
       </section>
 
+      <section>
+
+      <button class="exprience">10+Year
+        Experience</button>
+
     </section>
+    <!-- somefacts section -->
+    <section class="somefacts">
+      <h4>Some Facts</h4>
+      <p class="some-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+    </section>
+    <!-- 4icons -->
+   <div class="container">
+    <div class="awards">
+      <img class="icon-first" src="./images/icons/ribon.png" alt="">
+      <h4 class="h4-first">54</h4>
+      <p class="h4-p-f">Awards Winnings</p>
+   <div class="container">
+    <div class="awards">
+      <img class="icon-sec" src="./images/icons/projects.png" alt="">
+      <h4 class="h4-sec">1458</h4>
+      <p class="h4-p-s">ProjectFinished</p>
+   <div class="container">
+    <div class="awards">
+      <img class="icon-th" src="./images/icons/customers.png" alt="">
+      <h4 class="h4-th">590</h4>
+      <p class="h4-p-th">ClientsWorked</p>
+   <div class="container">
+    <div class="awards">
+      <img class="icon-four" src="./images/icons/email.png" alt="">
+      <h4 class="h4-first">22578</h4>
+      <p class="h4-p-f">EmailSend</p>
+    </div>
+   </div>
+
+   <div class="sponser">
+    <h3 class="sponspors">Our Sponspors</h3>
+    <p class="spons-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+   </div>
+
+   <!-- logo -->
+   <div class="spotify">
+    <img src="./images/sponsors/spotify.png" alt="">
+   </div>
+   <div class="amazon">
+    <img src="./images/sponsors/amazon.png" alt="">
+   </div>
+   <div class="google">
+    <img src="./images/sponsors/google.png" alt="">
+   </div>
+   <div class="tele">
+    <img src="./images/sponsors/telerama.png" alt="">
+   </div>
+   <div class="figma">
+    <img src="./images/sponsors/figma.png" alt="">
+   </div>
   </main>
+<footer class="text-f">
+  All rights reserved copyright@2023 startup landing page design
+</footer>
 
 </body>
 </html>
